# NebulaShell

./: .audit-ci.json  .env.example  .gitignore  .npmrc  BUILD_GUIDE.md  BUILD_SUMMARY.md  CLAUDE.md  LICENSE  README.md  TESTING.md  WARP.md  babel.config.js  debug-test.js  eslint.config.mjs  jest.config.js  jest.integration.config.js  jest.integration.setup.js  jest.setup.backend.js  jest.setup.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  server.ts  tsconfig.jest.json  tsconfig.json  tsconfig.server.json
.augment/rules/: BuildAll.md  RemoveTests.md  RunFixTest.md  RunFixTests.md  UpdateGitignore.md  UpdateTests.md
.claude/: settings.local.json
.github/workflows/: test.yml
__tests__/: README.md  infrastructure-validation.test.tsx  simple.test.ts
__tests__/accessibility/: accessibility.test.tsx
__tests__/api/: file-transfer.test.ts
__tests__/components/accessibility/: AccessibilityProvider.test.tsx
__tests__/components/collaboration/: CollaborationPanel.test.tsx
__tests__/e2e/: global-setup.ts  global-teardown.ts  layout-extended.spec.ts  layout-smoke.spec.ts
__tests__/integration/: command-execution-validation.test.ts  complete-ssh-workflow-real-context.test.tsx  complete-ssh-workflow.test.tsx  end-to-end-terminal-testing.test.ts  error-handling-connection-management.test.ts  frontend-terminal-flow.test.tsx  ssh-manager-comprehensive.test.ts  ssh-operations.test.ts  websocket-communication.test.ts  websocket-server.test.ts
__tests__/lib/: connection-profiles-enhanced.test.ts  terminal-history-enhanced.test.ts  terminal-themes.test.ts  websocket-collaboration-manager.test.ts
__tests__/mocks/: node-ssh.js  socket.io.ts  ssh.ts  xterm.js  xterm.ts
__tests__/performance/: performance.test.tsx
__tests__/setup/: docker-compose.test.yml  docker-ssh-server.dockerfile  env.js  global-setup.js  global-teardown.js  test-database.ts  test-environment.ts
__tests__/types/: jest-axe.d.ts
__tests__/utils/: test-utils.tsx
build-scripts/: build-all-platforms.js  build-all-platforms.ps1  build-all-platforms.sh
docs/: TEST_STRATEGY.md
e2e/: file-transfer.spec.ts  terminal-themes.spec.ts
scripts/: fix-api-routes.js  test-all.js  test-summary.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  logging.rs  main.rs  optimization.rs  performance.rs  recording.rs  security.rs  server.rs  transfer.rs  types.rs  websocket.rs
src-tauri/src/ssh/: mod.rs  session.rs  shell.rs
src-tauri/tests/: integration_tests.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/ssh/: index.ts  (+2 more)
src/hooks/: use-container-query.ts  use-performance-monitor.ts  use-responsive.ts  use-terminal-config.ts  use-touch-gestures.ts
src/lib/: backend-config.ts  connection-profile-manager.ts  connection-profiles-enhanced.ts  design-system.ts  file-transfer-manager.ts  fuzzy-search.ts  logger.ts  security.ts  sftp-manager.ts  ssh-key-manager.ts  ssh-manager.ts  tauri-adapter.ts  terminal-aliases-manager.ts  terminal-autocomplete-manager.ts  terminal-command-processor.ts  terminal-history-enhanced.ts  terminal-history-manager.ts  terminal-session-manager.ts  terminal-session-persistence.ts  terminal-settings-manager.ts  terminal-themes.ts  utils.ts  websocket-adapter.ts  websocket-collaboration-manager.ts  websocket-server.ts
src/types/: connection-profile.ts  file-transfer.ts  server.ts  ssh-keys.ts  ssh.ts  terminal-aliases.ts  terminal-autocomplete.ts  terminal-history.ts  terminal-session.ts  terminal-settings.ts  websocket.ts
tests/integration/: complete-ssh-workflow.test.tsx  frontend-terminal-flow.test.tsx  ssh-operations.test.ts  websocket-server.test.ts
tests/mocks/: socket.io.ts  ssh.ts  xterm.ts
tests/unit/: security-manager.test.ts  sftp-manager.test.ts  ssh-manager.test.ts  terminal-history-manager.test.ts
(+97 files in other folders)
